Added logs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ Assets/Plugins/Editor/JetBrains*
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
+[Ll]ogs/
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
@@ -36,6 +37,7 @@ ExportedObj/
 *.pdb
 *.opendb
 *.VC.db
+*.log
 
 # Unity3D generated meta files
 *.pidb.meta
