--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "2.8.2",
     "com.unity.collab-proxy": "1.13.5",
     "com.unity.ide.rider": "3.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.4",
+    "com.unity.recorder": "3.0.2",
     "com.unity.render-pipelines.universal": "12.1.0",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
