--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.rider": "3.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.4",
+    "com.unity.probuilder": "5.0.3",
     "com.unity.recorder": "3.0.2",
     "com.unity.render-pipelines.universal": "12.1.0",
     "com.unity.test-framework": "1.1.29",
